some hw fixes